@@ -67,6 +67,7 @@ export(itis_downstream)
 export(itis_name)
 export(itis_phymat_format)
 export(itis_taxrank)
+export(iucn_status)
 export(iucn_summary)
 export("%notin%")
 export(phylomatic_tree)
@@ -100,3 +101,5 @@ import(XML)
 S3method(classification,default)
 S3method(classification,tsn)
 S3method(classification,uid)
+S3method(iucn_status,default)
+S3method(iucn_status,iucn)
